<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lucx1.substratum.lucitheme.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:adjustViewBounds="false"
            android:background="@color/background"
            android:contentDescription="@string/ThemeName"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/heroimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/ThemeName"
                app:srcCompat="@mipmap/ic_launcher"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/byThemeAuthor"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TextView" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/open_substratum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/OpenSubs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            tools:targetApi="o">

            <ImageButton
                android:id="@+id/BtnShutdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/Shutdown"
                app:srcCompat="@drawable/poweroff_round" />

            <ImageButton
                android:id="@+id/BtnReboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/Reboot"
                app:srcCompat="@drawable/reboot_round" />
        </LinearLayout>

        <Button
            android:id="@+id/powerOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/powerOptions"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>