<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lucx1.substratum.lucitheme.PowerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/shutdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/Shutdown"
            app:srcCompat="@drawable/poweroff_round" />

        <ImageButton
            android:id="@+id/reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/Reboot"
            app:srcCompat="@drawable/reboot_round" />

        <ImageButton
            android:id="@+id/soft_reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/SoftReboot"
            app:srcCompat="@drawable/soft_reboot_round" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="33dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Shutdown"
            android:textAlignment="center" />

        <TextView
            android:layout_width="33dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reboot"
            android:textAlignment="center" />

        <TextView
            android:layout_width="33dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SoftReboot"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/Recovery"
            app:srcCompat="@drawable/recovery_round" />

        <ImageButton
            android:id="@+id/bootloader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/Bootloader"
            app:srcCompat="@drawable/bootloader_round" />

        <ImageButton
            android:id="@+id/screen_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/ScreenOff"
            app:srcCompat="@drawable/screen_off_round" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="33dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Recovery"
            android:textAlignment="center" />

        <TextView
            android:layout_width="33dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Bootloader"
            android:textAlignment="center" />

        <TextView
            android:layout_width="33dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ScreenOff"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>